# whisper

./: .gitignore  README.md  pyproject.toml  temporary_storage.ipynb  whisper.ipynb
doc/: cn_aider.txt  doc_gui.md  doc_tree.md  whisper_hallucinations.txt
notebooks/: formate_transformer.ipynb  gen_article_from_transcripts.ipynb  gen_article_from_transcripts_updated.ipynb  gen_folder_transcripts.ipynb  gen_transcript.ipynb  gui.ipynb  whisper.ipynb  yt_audio_workflow.ipynb
scripts/: env.py  full_pipeline.py  gui.py  run_gui.py  time_stamp_cleaner.py  transcripts_summary.py  voice2transcripts.py  yt_mp3_download.py
spec/: spec_add_read.md  spec_cli.md  spec_read_add.md
test/: test_gui.py  test_time_stamp_cleaner.py  test_voice2transcripts.py  test_whisper_cpp.py
