[project]
name = "yt-audio-downloader"
version = "0.1.0"
description = "Download, process, transcribe, and summarize YouTube audio"

dependencies = [
    "yt-dlp",
    "aider-chat",
    "requests",
    "ipykernel",
    "jupyter",
    "notebook",
    "ane_transformers ; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "openai-whisper ; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "coremltools ; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "pytest",
    "pytest-mock",
]

[tool.pytest]
testpaths = ["test"]
addopts = "-v --durations=10"
